# GSW-C

./: .gitignore  .hgtags  .pre-commit-config.yaml  CMakeLists.txt  GNUmakefile  GNUmakefile.example  LICENSE  Makefile  Makefile-clang-cl  Makefile-g++  README  README-developer  TOOLS.gcc  TOOLS.ini  debug_makefile  gsw_check_data.c  gsw_check_data.h  gsw_check_data.nc  gsw_check_functions.c  gsw_data_ncdump.txt  gsw_format.c  gsw_formatc.c  gsw_internal_const.h  gsw_oceanographic_toolbox-head  gsw_oceanographic_toolbox-tail  gsw_oceanographic_toolbox.c  gsw_sa_ct_interp.c  gsw_saar.c  gsw_test.c  gsw_tracer_ct_interp.c  gswteos-10-exports.h  gswteos-10.h  libgswteos-10.spec.proto  make_check_data.py  make_data_from_mat.py  make_saar_data.py  meson.build  meson.options  teos-10.h  test_strf_1.c  (+1 more)
.github/workflows/: nix-tests.yml  pre-commit.yml  test-alternative-compilers.yml  test-cpp-all.yml  test-g++.yml  tests-clang-cl.yml  tests-meson.yml  tests.yml  win-tests.yml
toolbox/: gsw_add_barrier.c  gsw_add_mean.c  gsw_adiabatic_lapse_rate_from_ct.c  gsw_adiabatic_lapse_rate_ice.c  gsw_alpha.c  gsw_alpha_on_beta.c  gsw_alpha_wrt_t_exact.c  gsw_alpha_wrt_t_ice.c  gsw_beta.c  gsw_beta_const_t_exact.c  gsw_c_from_sp.c  gsw_cabbeling.c  gsw_chem_potential_water_ice.c  gsw_chem_potential_water_t_exact.c  gsw_cp_ice.c  gsw_cp_t_exact.c  gsw_ct_first_derivatives.c  gsw_ct_first_derivatives_wrt_t_exact.c  gsw_ct_freezing.c  gsw_ct_freezing_exact.c  gsw_ct_freezing_first_derivatives.c  gsw_ct_freezing_first_derivatives_poly.c  gsw_ct_freezing_poly.c  gsw_ct_from_enthalpy.c  gsw_ct_from_enthalpy_exact.c  gsw_ct_from_entropy.c  gsw_ct_from_pt.c  gsw_ct_from_rho.c  gsw_ct_from_t.c  gsw_ct_maxdensity.c  gsw_ct_second_derivatives.c  gsw_deltasa_from_sp.c  gsw_dilution_coefficient_t_exact.c  gsw_dynamic_enthalpy.c  gsw_enthalpy.c  gsw_enthalpy_ct_exact.c  gsw_enthalpy_diff.c  gsw_enthalpy_first_derivatives.c  gsw_enthalpy_first_derivatives_ct_exact.c  gsw_enthalpy_ice.c  (+142 more)
